--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -12,20 +12,25 @@
   <div class="column">
     <img src="images/logo_fitbit_transparent.png" alt="Fitbit" style="width:100%">
   </div>
-</div
+</div>
 
-<div>
 
 <div class="text">
 
-<h2>Fitbit connectat amb èxit! El teu codi és:</h2>
-<h4>Fitbit conectado con éxito! Tu código es:</h4>
-<h4>Fitbit connected successfully! Your code is:</h4>
+	<h2>Fitbit connectat amb èxit! El teu codi és:</h2>
+ 	<h4>Fitbit conectado con éxito! Tu código es:</h4>
+ 	<h4>Fitbit connected successfully! Your code is:</h4>
 
-<h1 id="code"></h1>
+ 	<h1 id="code"></h1>
 
+</div>
 
-<div>
+<div class="clipboard">
+
+  	<input type="text" value="Hello World" id="myInput">
+	<button onclick="myFunction()" img src="images/loading.png"></button>
+
+</div>
 
 <script>
   const params = new Proxy(new URLSearchParams(window.location.search), {
@@ -34,11 +39,25 @@
   const code = params.code;
   const elem = document.getElementById('code');
   elem.innerHTML = code;
+  
+  function myFunction() {
+  // Get the text field
+  var copyText = document.getElementById("myInput");
+
+  // Select the text field
+  copyText.select();
+  copyText.setSelectionRange(0, 99999); // For mobile devices
+
+  // Copy the text inside the text field
+  navigator.clipboard.writeText(copyText.value);
+  
+  // Alert the copied text
+  alert("Copied the text: " + copyText.value);
+}
 </script>
 
 <style>
 * {
-
   box-sizing: border-box;
   max-width: 500px;
   margin: auto;
@@ -47,7 +66,8 @@
 .column {
   float: left;
   width: 33.33%;
-  padding: 5px;
+  padding: 5px;  
+  margin-top: 50px;
 }
 
 /* Clearfix (clear floats) */
@@ -55,6 +75,11 @@
   content: "";
   clear: both;
   display: table;
+}
+
+.text {
+  margin-top: 100px
+
 }
 </style>
 
