--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -28,7 +28,7 @@
 <div class="clipboard">
 
   	<input type="text" value="Hello World" id="myInput">
-	<button onclick="myFunction()" img src="images/loading.png"></button>
+	<button onclick="myFunction()" img src="images/copy_icon.png"></button>
 
 </div>
 
