--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -42,7 +42,7 @@
   
   function myFunction() {
   // Get the text field
-  var copyText = document.getElementById("code");
+  var copyText = document.getElementById('code');
 
   // Select the text field
   copyText.select();
