--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -26,7 +26,7 @@
 <div class="clipboard">
 
   	<h1 id="code"></h1>
-	<button id="copy-image" onclick="copyText()"><img src="images/copy_icon.png"></button>
+	<button id="copy-image" onclick="copyElementText(code)"><img src="images/copy_icon.png"></button>
 
 </div>
 
@@ -38,13 +38,14 @@
   const elem = document.getElementById('code');
   elem.innerHTML = code;
   
-  function copyText() {
-  
-  // Copy the text inside the text field
-  navigator.clipboard.writeText(code);
-  
-  // Alert the copied text
-  alert("Copied the text: " + code);
+ function copyElementText(id) {
+    var text = document.getElementById(id).innerText;
+    var elem = document.createElement("textarea");
+    document.body.appendChild(elem);
+    elem.value = text;
+    elem.select();
+    document.execCommand("copy");
+    document.body.removeChild(elem);
 }
 </script>
 
