--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -26,7 +26,7 @@
 <div class="clipboard">
 
   	<h1 id="code"></h1>
-	<button id="copy-image" onclick="copyElementText(code)">Copy</button>
+	<button id="copy-image" onclick="copyElementText("code")">Copy</button>
 
 </div>
 
