--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -26,7 +26,7 @@
 <div class="clipboard">
 
   	<h3 id="code"></h3>
-	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy..."></button>
+	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy" height="20%" width="20%"></button>
 
 </div>
 
