--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -88,4 +88,13 @@
 #code{
 	margin-right: 5px;
 }
+	
+.button {
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+}
 </style>
