--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -29,7 +29,7 @@
 <div class="clipboard">
 
   	<h3 id="code"></h3>
-	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy..."></button>
+	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy..." height="20%" width="20%"></button>
 
 </div>
 
@@ -56,6 +56,7 @@
   border: 0;
   align-items: center;
   background: #EFBC83;
+  font-family: Nunito, sans-serif;
 }
 
 header {
@@ -87,8 +88,8 @@ header {
   border-radius: 25px;
   border: 2px solid #A6753F;
   padding: 20px;
-  width: 500px;
-  height: 110px;
+  width: 525px;
+  height: 115px;
 }
 
 .copy-image{
