--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -7,13 +7,13 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/logo_soundless_transparent.png" alt="Soundless" style="width:100%">
+    <img src="images/logo_soundless_transparent.png" alt="Soundless" style="width:100%" height="200px" width="200px">
   </div>
   <div class="column">
-    <img src="images/loading.gif" alt="Loading..." style="width:100%">
+    <img src="images/loading.gif" alt="Loading..." style="width:100%" height="200px" width="200px">
   </div>
   <div class="column">
-    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" style="width:100%">
+    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="200px" width="200px" style="width:100%">
   </div>
 </div>
 
@@ -29,7 +29,7 @@
 <div class="clipboard">
 
   	<h3 id="code"></h3>
-	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy..." height="20%" width="20%"></button>
+	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy" height="20px" width="20px"></button>
 
 </div>
 
