--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -7,13 +7,13 @@
 
 <div class="row">
   <div class="column">
-    <img src="images/logo_soundless_transparent.png" alt="Soundless" style="width:100%" height="200px" width="200px">
+    <img src="images/logo_soundless_transparent.png" alt="Soundless" height="20%" width="20%">
   </div>
   <div class="column">
-    <img src="images/loading.gif" alt="Loading..." style="width:100%" height="200px" width="200px">
+    <img src="images/loading.gif" alt="Loading..." height="20%" width="20%">
   </div>
   <div class="column">
-    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="200px" width="200px" style="width:100%">
+    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="20%" width="20%">
   </div>
 </div>
 
