--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -7,13 +7,13 @@
 
 <div class="row">
   <div class="columnleft">
-    <img src="images/logo_soundless_transparent.png" alt="Soundless" height="50%" width="50%">
+    <img src="images/logo_soundless_transparent.png" alt="Soundless" height="200px" width="200px">
   </div>
   <div class="columncenter">
-    <img src="images/loading.gif" alt="Loading..." height="50%" width="50%">
+    <img src="images/loading.gif" alt="Loading..." height="200px" width="200px">
   </div>
   <div class="columnright">
-    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="50%" width="50%">
+    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="200px" width="200px">
   </div>
 </div>
 
@@ -70,6 +70,7 @@ header {
   width: 33.33%;
   margin-top: 50px;
   text-align:right;
+  margin-right: 0;
 
 }
 .columncenter {
@@ -77,6 +78,8 @@ header {
   width: 33.33%;
   margin-top: 50px;
   text-align:center;
+  margin-right: 0;
+  margin-left: 0;
 
 }
 .columnright {
@@ -84,6 +87,7 @@ header {
   width: 33.33%;
   margin-top: 50px;
   text-align:left;
+  margin-left: 0;
 
 }
 
