--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -6,14 +6,17 @@
 </header>
 
 <div class="row">
+  <div class="space">
+  
+  </div>
   <div class="columnleft">
-    <img src="images/logo_soundless_transparent.png" alt="Soundless" height="200px" width="200px">
+    <img src="images/logo_soundless_transparent.png" alt="Soundless" height="20%" width="20%">
   </div>
   <div class="columncenter">
-    <img src="images/loading.gif" alt="Loading..." height="200px" width="200px">
+    <img src="images/loading.gif" alt="Loading..." height="20%" width="20%">
   </div>
   <div class="columnright">
-    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="200px" width="200px">
+    <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="20%" width="20%">
   </div>
 </div>
 
@@ -65,22 +68,30 @@ header {
   width: auto;
 }
 
+.space {
+  float: left;
+  width: 35%;
+  margin-top: 50px;
+  text-align:right;
+
+}
+
 .columnleft {
   float: left;
-  width: 20%;
+  width: 10%;
   margin-top: 50px;
   text-align:right;
 
 }
 .columncenter {
   float: left;
-  width: 20%;
+  width: 10%;
   margin-top: 50px;
   text-align:center;
 }
 .columnright {
   float: left;
-  width: 20%;
+  width: 10%;
   margin-top: 50px;
   text-align:left;
 
