--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -13,7 +13,7 @@
     <img src="images/logo_soundless_transparent.png" alt="Soundless" height="90%" width="90%">
   </div>
   <div class="columncenter">
-    <img src="images/loading.gif" alt="Loading..." height="100%" width="100%">
+    <img src="images/loading(2).gif" alt="Loading..." height="100%" width="100%">
   </div>
   <div class="columnright">
     <img src="images/logo_fitbit_transparent.png" alt="Fitbit" height="100%" width="100%">
