--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -31,10 +31,11 @@
 
 <div class="clipboard">
 
-  	<h3 id="code"></h3>
-	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy" height="20px" width="20px"></button>
+  	<h1 id="code"></h1>
+	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy" height="24px" width="24px"></button>
 
 </div>
+
 
 <script>
   const params = new Proxy(new URLSearchParams(window.location.search), {
@@ -63,7 +64,7 @@
 }
 
 header {
-  background: white;
+  background: #EFBC83;
   height: 70px;
   width: auto;
 }
@@ -86,7 +87,7 @@ header {
 .columncenter {
   float: left;
   width: 10%;
-  margin-top: 50px;
+  margin-top: 55px;
   text-align:center;
 }
 .columnright {
@@ -120,7 +121,7 @@ header {
 }
 
 .clipboard {
-	margin-top: 50px;
+	margin-top: 75px;
     display: flex;
   	align-items: center;
 }
