--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -35,7 +35,7 @@
 
 <div class="clipboard">
 
-  	<h1 id="code"></h1>
+  	<h1 id="code" onclick="copyElementText('code')"></h1>
 	<button id="copy-image" onclick="copyElementText('code')"><img src="images/copy_icon.png" alt="copy" height="24px" width="24px"></button>
 
 </div>
