--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -58,7 +58,7 @@
   	let element = document.getElementById(elementID); //select the element
  	let elementText = element.textContent; //get the text content from the element
 	navigator.clipboard.writeText(elementText);
-    hideElem();
+    	showElem();
  }
 
  function hideElem() {
