--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -27,9 +27,9 @@
 
 <div class="text">
 
-	<h2>Fitbit connectat amb èxit! El teu codi és:</h2>
- 	<h4>Fitbit conectado con éxito! Tu código es:</h4>
- 	<h4>Fitbit connected successfully! Your code is:</h4>
+	<h2 id = "cat">Fitbit connectat amb èxit! El teu codi és:</h2>
+ 	<h4 id = "esp">Fitbit conectado con éxito! Tu código es:</h4>
+ 	<h4 id = "eng">Fitbit connected successfully! Your code is:</h4>
 
 </div>
 
@@ -159,6 +159,14 @@ header {
 	margin-top: 10px;
     display: flex;
   	align-items: center;
+}
+
+#esp {
+	margin-top: 7px;
+}
+
+#eng {
+	margin-top: 7px;
 }
 
 </style>
