--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -28,9 +28,9 @@
 
 <div class="text">
 
-	<h2 id = "cat">Fitbit connectat! Clica el codi per copiar-lo i torna a Soundless.</h2>
- 	<h4 id = "esp">Fitbit conectado! Haz clic sobre el código para copiarlo y vuelve a Soundless.</h4>
- 	<h4 id = "eng">Fitbit connected! Tap the code below to copy it, and return to Soundless.</h4>
+	<h2 id = "cat">Clica el codi per copiar-lo i torna a Soundless.</h2>
+ 	<h4 id = "esp">Haz clic sobre el código para copiarlo y vuelve a Soundless.</h4>
+ 	<h4 id = "eng">Tap the code below to copy it, and return to Soundless.</h4>
 
 </div>
 
@@ -84,7 +84,7 @@
 }
 
 header {
-  background: #EFBC83;
+  background: #EAD09F;
   height: 70px;
   width: auto;
 }
