--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -28,7 +28,7 @@
 
 <div class="text">
 
-	<h2 id = "cat">Clica el codi per copiar-lo i torna a Soundless.</h2>
+	<h3 id = "cat">Clica el codi per copiar-lo i torna a Soundless.</h3>
  	<h4 id = "esp">Haz clic sobre el código para copiarlo y vuelve a Soundless.</h4>
  	<h4 id = "eng">Tap the code below to copy it, and return to Soundless.</h4>
 
@@ -40,7 +40,9 @@
 </div>
 
 <div id="copy">
-	<p>✓ Copied! </p>
+	<p>✅ Copiat! </p>
+	<p>✅ ¡Copiado! </p>
+	<p>✅ Copied! </p>
 </div>
 
 <script>
@@ -132,39 +134,40 @@ header {
   padding: 20px;
   width: 525px;
   height: 115px;
+  font-family: Nunito, sans-serif;
 }
 
 .copy-image{
-	width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .clipboard {
-	margin-top: 75px;
-    display: flex;
-  	align-items: center;
+  margin-top: 75px;
+  display: flex;
+  align-items: center;
 }
 
 #copy-image{
-	margin-left: 5px;
+  margin-left: 5px;
 }
 
 #code{
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 #copy {
-	margin-top: 10px;
-    display: flex;
-  	align-items: center;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
 }
 
 #esp {
-	margin-top: 7px;
+  margin-top: 10px;
 }
 
 #eng {
-	margin-top: 7px;
+  margin-top: 10px;
 }
 
 </style>
