--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -28,9 +28,9 @@
 
 <div class="text">
 
-	<h3 id = "cat">Clica el codi per copiar-lo i torna a Soundless.</h3>
- 	<h4 id = "esp">Haz clic sobre el código para copiarlo y vuelve a Soundless.</h4>
- 	<h4 id = "eng">Tap the code below to copy it, and return to Soundless.</h4>
+	<h3 id = "cat">Copia el codi i torna i torna a Soundless.</h3>
+ 	<h4 id = "esp">Copia el código y vuelve a Soundless.</h4>
+ 	<h4 id = "eng">Copy the code and return to Soundless.</h4>
 
 </div>
 
