--- a/redirect_uri_android.html
+++ b/redirect_uri_android.html
@@ -28,7 +28,7 @@
 
 <div class="text">
 
-	<h3 id = "cat">Copia el codi i torna i torna a Soundless.</h3>
+	<h3 id = "cat">Copia el codi i torna a Soundless.</h3>
  	<h4 id = "esp">Copia el código y vuelve a Soundless.</h4>
  	<h4 id = "eng">Copy the code and return to Soundless.</h4>
 
