--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
         <a href="#prova-pilot" class="nav-link w-nav-link">Uneix-te a la prova pilot</a>
         <a href="#qui-som" class="nav-link w-nav-link">Qui som</a>
+        <a href="/soundless_report_ca.pdf" class="nav-link w-nav-link">Resultats (Gener)</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
           <div class="dropdown-toggle dropdown-toggle-2 w-dropdown-toggle">
             <div class="text-block-2">Idioma</div>
