--- a/en/index.html
+++ b/en/index.html
@@ -26,6 +26,7 @@
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
         <a href="#prova-pilot" class="nav-link w-nav-link">Join testing</a>
         <a href="#qui-som" class="nav-link w-nav-link">About us</a>
+        <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Results (January)</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
           <div class="dropdown-toggle dropdown-toggle-2 w-dropdown-toggle">
             <div class="text-block-2">Language</div>
