--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
       <div class="section-subtitle-white">Soundless impedeix que la teva confidencialitat es vegi afectada.<br>Treballem des d&#x27;organismes de recerca neutrals i sense ànim de lucre, amb una òptica centrada en la ciència ciutadana.<br></div><img src="images/soundless-privacitat-wordcloud.png" loading="lazy" width="512" height="512" alt="Mesures que pren Soundless per la privacitat de les dades." srcset="images/soundless-privacitat-wordcloud-p-500.png 500w, images/soundless-privacitat-wordcloud-p-800.png 800w, images/soundless-privacitat-wordcloud.png 1024w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 100vw, 512px" class="image">
     </div>
   </div>
+  <div id="publicacions" class="section wf-section">
+    <div class="container w-container">
+      <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
+      <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
+      <ul style=“list-style-type:disc”> <li>El primer punt</li> <li>El segon punt</li> <li>El tercer punt</li> </ul>
+    </div>
+  </div>
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Uneix-te a la prova pilot</strong></h2>
