--- a/index.html
+++ b/index.html
@@ -138,7 +138,21 @@
     <div class="container w-container">
       <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
       <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
-      <ul style=“list-style-type:disc”> <li>El primer punt</li> <li>El segon punt</li> <li>El tercer punt</li> </ul>
+      <style> ul { column-count: 2; } </style> 
+      <ul> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 Web</a>
+        </li> 
+      </ul>
     </div>
   </div>
   <div id="prova-pilot" class="section wf-section">
