--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
   </div>
   <div id="publicacions" class="section wf-section">
-    <div class="container w-container">
+    <div class="w-container">
       <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
       <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
       <style> ul { column-count: 2; } </style> 
@@ -151,6 +151,42 @@
         </li> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 Web</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Radio Ciutat de Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
         </li> 
       </ul>
     </div>
