--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
   </div>
   <div id="publicacions" class="section wf-section">
-    <div class="w-container">
+    <div class="container w-container">
       <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
       <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
       <style> ul { column-count: 2; } </style> 
