Added style to the bullet list

--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     <div class="container w-container">
       <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
       <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
-      <style> ul { column-count: 2; } </style> 
-      <ul> 
+      <ul class="two-column-bullet"> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
         </li> 
