Changed in ES and EN

--- a/es/index.html
+++ b/es/index.html
@@ -24,6 +24,7 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
+        <a href="#publicacions" class="nav-link w-nav-link">Recopilación de prensa</a>
         <a href="#prova-pilot" class="nav-link w-nav-link">Únete a la prueba piloto</a>
         <a href="#qui-som" class="nav-link w-nav-link">Quiénes somos</a>
         <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Resultados (Enero)</a>
@@ -134,6 +135,63 @@
       <div class="section-subtitle-white">Soundless impide que tu confidencialidad se vea afectada.<br>Trabajamos desde organismos de investigación neutrales y sin ánimo de lucro, con una óptica centrada en la ciencia ciudadana.<br></div><img src="images/soundless-privacitat-wordcloud.png" loading="lazy" width="512" height="512" alt="Mesures que pren Soundless per la privacitat de les dades." srcset="images/soundless-privacitat-wordcloud-p-500.png 500w, images/soundless-privacitat-wordcloud-p-800.png 800w, images/soundless-privacitat-wordcloud.png 1024w" sizes="(max-width: 479px) 90vw, (max-width: 767px) 100vw, 512px" class="image">
     </div>
   </div>
+  <div id="publicacions" class="section wf-section">
+    <div class="container w-container">
+      <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
+      <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
+      <ul class="two-column-bullet"> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 Web</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Radio Ciutat de Tarragona</a>
+        </li> 
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
+        </li> 
+      </ul>
+    </div>
+  </div>
+  <hr class="divider">
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Únete a la prueba piloto</strong></h2>
