--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
+        <a href="#publicacions" class="nav-link w-nav-link">Recull de premsa</a>
         <a href="#prova-pilot" class="nav-link w-nav-link">Uneix-te a la prova pilot</a>
         <a href="#qui-som" class="nav-link w-nav-link">Qui som</a>
         <a href="/soundless_report_ca.pdf" class="nav-link w-nav-link">Resultats (Gener)</a>
