--- a/es/index.html
+++ b/es/index.html
@@ -25,7 +25,6 @@
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
         <a href="#publicacions" class="nav-link w-nav-link">Recopilación de prensa</a>
-        <a href="#prova-pilot" class="nav-link w-nav-link">Únete a la prueba piloto</a>
         <a href="#qui-som" class="nav-link w-nav-link">Quiénes somos</a>
         <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Resultados (Enero)</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
@@ -137,8 +136,8 @@
   </div>
   <div id="publicacions" class="section wf-section">
     <div class="container w-container">
-      <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
-      <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
+      <h2 class="heading-8"><strong>Recopilación de prensa</strong></h2>
+      <div class="section-subtitle">Ésta es una recopilación de todos los sitios donde ha sido publicado Soundless.</div>
       <ul class="two-column-bullet"> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
@@ -189,9 +188,9 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
         </li> 
       </ul>
+      <hr class="divider">
     </div>
   </div>
-  <hr class="divider">
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Únete a la prueba piloto</strong></h2>
