Last main design

--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="#soundless" class="nav-link w-nav-link">Soundless</a>
-        <a href="#publicacions" class="nav-link w-nav-link">Press collection</a>
+        <a href="#publicacions" class="nav-link w-nav-link">Press</a>
         <a href="#qui-som" class="nav-link w-nav-link">About us</a>
         <a href="/soundless_report_es.pdf" class="nav-link w-nav-link">Results (January)</a>
         <div data-hover="false" data-delay="0" class="w-dropdown">
@@ -188,8 +188,8 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
         </li> 
       </ul>
-      <hr class="divider">
     </div>
+    <hr class="divider">
   </div>
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
