--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div id="publicacions" class="section wf-section">
     <div class="container w-container">
       <h2 class="heading-8"><strong>Recull de premsa</strong></h2>
-      <div class="section-subtitle">Aquest es un recull de tots els llocs on ha sigut publicat Soundless.</div>
+      <div class="section-subtitle">Aquest és un recull de tots els llocs on ha sigut publicat Soundless.</div>
       <ul class="two-column-bullet"> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
@@ -182,7 +182,7 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Radio Ciutat de Tarragona</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona</a>
         </li> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
