--- a/es/index.html
+++ b/es/index.html
@@ -182,7 +182,7 @@
           <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Radio Ciutat de Tarragona</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona</a>
         </li> 
         <li>
           <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
