Organize publications Added TV3 publication

--- a/en/index.html
+++ b/en/index.html
@@ -140,52 +140,57 @@
       <div class="section-subtitle">This is a compilation of all the sites where Soundless has been published.</div>
       <ul class="two-column-bullet"> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12 (TV)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2883-01-HeQpxI8x0vJehnRTWqJqpjA-423-11035-0-31204403-1134" target="_blank">TAC 12</a>
+          <a href="https://www.ccma.cat/tv3/alacarta/telenoticies-comarques/el-soroll-dels-trens-al-barri-del-serrallo-provoca-alteracions-cardiaques-als-veins/video/6211031/" target="_blank">TV3 (TV)</a>
+        </li> 
+
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona (Radio)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?3102-01-HcJWw759FAlZhmanJXGFJog-423-11035-0-31204403-1134" target="_blank">Onda Cero Tarragona</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio (Radio)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 Web</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio (Radio)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HEMzTcP5LR1eXq4xlE7Qg9w-423-52778-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HvYirhcwFMi6kCSgkMoRalA-423-52778-0-31204403-1134" target="_blank">Tarragona Ràdio (Radio)</a>
+        </li> 
+
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2259-01-HGBJ6dmvB3dtBWv85Sj6eKA-423-11035-0-31173851-1134" target="_blank">Tarragona Ràdio</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?485-01-HdXj0ShdVitg7epqer1l2Ww-423-11035-0-31173851-1134" target="_blank">Diari de Tarragona (Press)</a>
+        </li>
+        <li>
+          <a href="https://www.pressclipping.com/sp3/redir.php?94986-01-H8oymuiqnBDKIIhQQyCFcfQ-423-11035-0-31204403-1134" target="_blank">TAC 12 (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?465-01-HMBFHtPFcIZukJrazxWnlOA-423-11035-0-31173851-1134" target="_blank">Més Tarragona (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?334-01-HGht3vkL9A6BoPVx9bBFAsg-423-11035-0-31173851-1134" target="_blank">La Vanguardia</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?672-01-H2iD3wTqMVZJ2i3RZRWrzNg-423-11035-0-31173851-1134" target="_blank">Tarragona Web Ràdio</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21 (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?2754-01-HyrASp1cvQoAI3Z1y4RAEBw-423-11035-0-31173851-1134" target="_blank">Tarragona 21</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?86393-01-HHOQDvDdMEXqE38bZufBSAA-423-11035-0-31173851-1134" target="_blank">Diari Més</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?1643-01-HPYvF0ueMe4bX6AKSFbtu3w-423-11035-0-31173851-1134" target="_blank">Reus Digital</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona (Press)</a>
         </li> 
         <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?4986-01-HUVxVEn7ShHsKgYbTHjsN1g-423-11035-0-31173851-1134" target="_blank">Corporació Catalana de Mitjans Audiovisuals</a>
-        </li> 
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?96270-01-HAvNmp0kLOO8cTfX3YVqPdQ-423-11035-0-31173851-1134" target="_blank">Ràdio Ciutat de Tarragona</a>
-        </li> 
-        <li>
-          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital</a>
+          <a href="https://www.pressclipping.com/sp3/redir.php?1583-01-Hjq1JSIpLG7pfB8uAw3AnUw-423-11035-0-31173851-1134" target="_blank">Nació Digital (Press)</a>
         </li> 
       </ul>
     </div>
