First test of youtube video in CA

--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@
     </div>
   </div>
   <hr class="divider">
+  <div id="video-resultat" class="section wf-section">
+    <div class="container w-container">
+      <h2 class="heading-8"><strong>Vídeo sobre la fase 1</strong></h2>
+      <div class="section-subtitle">Aquest vídeo explica els procediments, agraïments i resultats obtinguts en la fase 1 de l'estudi.</div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eztj7B0snQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+  </div>
+  <hr class="divider">
   <div id="prova-pilot" class="section wf-section">
     <div class="w-container">
       <h2 class="heading-8"><strong class="bold-text-6">Uneix-te a la prova pilot</strong></h2>
